--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^16.8.2",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.5",
+    "babel-preset-minify": "^0.5.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "react": "^16.8.3",
