--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run clean && webpack -p --config=configs/webpack/prod.js",
     "clean": "rm -f -r -d build",
     "lint": "tslint './src/**/*.ts*' --format stylish --force",
-    "start": "webpack-dev-server --config=configs/webpack/dev.js",
+    "start": "./node_modules/.bin/webpack-dev-server --config=configs/webpack/dev.js",
     "test": "jest --watch --coverage --config=configs/jest.json"
   },
   "devDependencies": {
