--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test": "jest --watch --coverage --config=configs/jest.json"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.5",
+    "babel-preset-minify": "^0.5.0",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
@@ -20,26 +23,23 @@
     "@types/node": "^11.10.4",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.8.2",
-    "react-hot-loader": "^4.7.2",
     "tslint": "^5.13.1",
     "tslint-config-airbnb-base": "^0.2.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.3.3"
+    "typescript": "^3.3.3",
+    "html-webpack-plugin": "^3.2.0"
   },
   "dependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.5",
-    "babel-preset-minify": "^0.5.0",
-    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "uglifyjs-webpack-plugin": "^2.1.2",
+    "react-hot-loader": "^4.7.2",
     "webpack-dev-middleware": "^3.6.0",
     "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "uglifyjs-webpack-plugin": "^2.1.2"
   }
 }
