--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "test": "jest --watch --coverage --config=configs/jest.json"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.5",
-    "babel-preset-minify": "^0.5.0",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
@@ -27,10 +24,13 @@
     "tslint-config-airbnb-base": "^0.2.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.3.3",
-    "html-webpack-plugin": "^3.2.0"
+    "typescript": "^3.3.3"
   },
   "dependencies": {
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.5",
+    "babel-preset-minify": "^0.5.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
