--- a/package.json
+++ b/package.json
@@ -23,23 +23,25 @@
     "typescript": "^3.3.3"
   },
   "dependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.5",
-    "babel-preset-minify": "^0.5.0",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.5",
+    "babel-preset-minify": "^0.5.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-hot-loader": "^4.7.2",
-    "webpack-dev-middleware": "^3.6.0",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-merge": "^4.2.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "uglifyjs-webpack-plugin": "^2.1.2"
+    "webpack-dev-middleware": "^3.6.0",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   }
 }
