--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tslint-config-airbnb-base": "^0.2.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.3.3"
+    "typescript": "^3.3.3",
+    "workbox-webpack-plugin": "^4.1.1"
   },
   "dependencies": {
     "@babel/cli": "^7.2.3",
@@ -39,6 +40,7 @@
     "react": "^16.8.3",
     "react-hot-loader": "^4.7.2",
     "style-loader": "^0.23.1",
+    "ts-jest": "^24.0.0",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
